--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,4 +59,4 @@ jobs:
           username: u480978523.lms.1staccesshomecareinc.com
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: dist/
-          server-dir: domains/lms.1staccesshomecareinc.com/public_html/
+          # server-dir: /
