--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "homepage": "/react",
+  "proxy": "http://localhost:8000",
   "scripts": {
     "dev": "vite --port=3000",
     "build": "vite build",
